--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -1,10 +1,39 @@
 services:
-  db:
-    image: postgres:latest
-    container_name: postgres_test
+  api:
+    build: .
+    volumes:
+      - .:/backend
+      - static_volume:/static
+      - uploads_volume:/uploads
+    command: [ "uvicorn", "api.main:app", "--reload", "--host", "0.0.0.0", "--port", "8080" ]
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: test
-      POSTGRES_PASSWORD: test
-      POSTGRES_DB: test
+      - PRODUCTION_MODE=True
+    depends_on:
+      - migrations
+      - db
 
-    network_mode: host
+  migrations:
+    build: .
+    volumes:
+      - .:/backend
+    command: sh -c "sleep 5s && alembic upgrade head"
+    env_file:
+      - .env
+    environment:
+      - PRODUCTION_MODE=True
+    depends_on:
+      - db
+
+  nginx:
+    image: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - static_volume:/static
+      - uploads_volume:/uploads
+      - ./nginx/local.default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - api
+
