--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,11 @@ sqlalchemy = "^2.0.36"
 postgres = "^4.0"
 asyncpg = "^0.30.0"
 python-dotenv = "^1.0.1"
+jinja2 = "^3.1.4"
+aiosqlite = "^0.20.0"
+alembic = "^1.13.3"
+python-multipart = "^0.0.17"
+aiofiles = "^24.1.0"
 
 
 [build-system]
