--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Create .env for Develop Environment
       run: |
-        echo "PRODUCTION_MODE=0" >> .env
+        echo "PRODUCTION_MODE=${{ secrets.PRODUCTION_MODE }}" >> .env
         echo "DB_LINK=${{ secrets.DB_LINK }}" >> .env
 
     - name: Build Docker Image
